--- a/GameEngineSDL.vcxproj
+++ b/GameEngineSDL.vcxproj
@@ -135,6 +135,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MapScreen.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MapScreen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
