--- a/GameEngineSDL.vcxproj
+++ b/GameEngineSDL.vcxproj
@@ -134,6 +134,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BattleScreen.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Glob.cpp" />
     <ClCompile Include="Hero.cpp" />
@@ -145,6 +146,7 @@
     <ClCompile Include="Puzzles.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BattleScreen.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Glob.h" />
     <ClInclude Include="Hero.h" />
