animation manager setup

--- a/GameEngineSDL.vcxproj
+++ b/GameEngineSDL.vcxproj
@@ -135,6 +135,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="AnimationManager.cpp" />
     <ClCompile Include="BattleScreen.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Glob.cpp" />
@@ -148,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="AnimationManager.h" />
     <ClInclude Include="BattleScreen.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Glob.h" />
