--- a/GameEngineSDL.vcxproj
+++ b/GameEngineSDL.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="AnimationManager.cpp" />
     <ClCompile Include="BattleScreen.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="CharacterAnimationSet.cpp" />
     <ClCompile Include="Glob.cpp" />
     <ClCompile Include="Hero.cpp" />
     <ClCompile Include="InfoBox.cpp" />
@@ -152,6 +153,8 @@
     <ClInclude Include="AnimationManager.h" />
     <ClInclude Include="BattleScreen.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="CharacterAnimationSet.h" />
+    <ClInclude Include="CharacterType.h" />
     <ClInclude Include="Glob.h" />
     <ClInclude Include="Hero.h" />
     <ClInclude Include="InfoBox.h" />
