--- a/GameEngineSDL.vcxproj
+++ b/GameEngineSDL.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="CharacterAnimationSet.cpp" />
     <ClCompile Include="Glob.cpp" />
     <ClCompile Include="Hero.cpp" />
+    <ClCompile Include="HPBar.cpp" />
     <ClCompile Include="InfoBox.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MapObject.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="CharacterType.h" />
     <ClInclude Include="Glob.h" />
     <ClInclude Include="Hero.h" />
+    <ClInclude Include="HPBar.h" />
     <ClInclude Include="InfoBox.h" />
     <ClInclude Include="MapObject.h" />
     <ClInclude Include="MapScreen.h" />
