--- a/GameEngineSDL.vcxproj.filters
+++ b/GameEngineSDL.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="HPBar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BattleButton.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MapScreen.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HPBar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BattleButton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
