--- a/GameEngineSDL.vcxproj
+++ b/GameEngineSDL.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AnimationManager.cpp" />
     <ClCompile Include="BattleButton.cpp" />
+    <ClCompile Include="BattleEffects.cpp" />
     <ClCompile Include="BattleScreen.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="CharacterAnimationSet.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="AnimationManager.h" />
     <ClInclude Include="BattleButton.h" />
+    <ClInclude Include="BattleEffects.h" />
     <ClInclude Include="BattleScreen.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="CharacterAnimationSet.h" />
