--- a/GameEngineSDL.vcxproj.filters
+++ b/GameEngineSDL.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="BattleButton.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BattleEffects.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MapScreen.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BattleButton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BattleEffects.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
