--- a/GameEngineSDL.vcxproj
+++ b/GameEngineSDL.vcxproj
@@ -73,6 +73,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>D:\development\SDL2_mixer-2.8.0\include;D:\development\SDL2_ttf-2.22.0\include;D:\development\SDL2_image-2.8.2\include;D:\development\SDL2\include;$(IncludePath)</IncludePath>
     <LibraryPath>D:\development\SDL2_image-2.8.2\lib\x64;D:\development\SDL2_ttf-2.22.0\lib\x64;D:\development\SDL2_mixer-2.8.0\lib\x64;D:\development\SDL2\lib\x64;$(LibraryPath)</LibraryPath>
+    <ExecutablePath>D:\development\SDL2\include;$(ExecutablePath)</ExecutablePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <ExecutablePath>D:\development\SDL2\include;$(ExecutablePath)</ExecutablePath>
+    <IncludePath>D:\development\SDL2_ttf-2.22.0\include;D:\development\SDL2_mixer-2.8.0\include;D:\development\SDL2_image-2.8.2\include;D:\development\SDL2\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\development\SDL2_ttf-2.22.0\lib\x64;D:\development\SDL2_mixer-2.8.0\lib\x64;D:\development\SDL2_image-2.8.2\lib\x64;D:\development\SDL2\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -131,6 +137,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
